Fix Yarn container logs parsing with meaningless types issue